2014-02-19  Araki Ken  <arakiken@users.sf.net>

	* fb/x_imagelib.c: resize_sixel() is added to resize the sixel image to
	  the screen size.

	* c_imagelib.c:
	  - The sixel width is changed just after parsing the first line to
	    reduce the cost of realloc_pixels() at the end of load_sixel_from_file().
	  - The step of increasing the width and height of the sixel image is
	    changed to 512.

	* win32/x_imagelib.c, gdiplus.cpp, none.cpp: Minor fixes.

	* android/jni/kik_debug.h: kik_msg_printf outputs messages at ANDROID_LOG_INFO level.

	* android/build.sh: Minor fixes.

	* ml_char.c: Minor fixes.

2014-02-18  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.fb, doc/ja/README.fb, x_main_config.c: Minor fixes.

	* fb/x_display.c:
	  - The width and height arguments of win->window_exposed
	    was wrongly reversed.
	  - Minor fixes of x_display_get_pixel() and x_display_put_image().

	* android/jni/x_display.c: Display rotation is supported.

2014-02-17  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.fb, doc/ja/README.fb: Updated.

	* fb/x_display.c, fb/x_display_*.c: Counterclockwise rotation is supported.

	* x_screen.c, x_main_config.c: The value of "rotate_display" option is
	  changed from true|false to none|right|left.

2014-02-16  Araki Ken  <arakiken@users.sf.net>

	* android/jni/x_event_source.c: ALooper_pollAll() doesn't block but
	  exits in 750ms in order to show ime preedit or commit text immediately.

	* bengali.table: "\xcf\xe8\xcd\xe8\xd6\xdb\xa2" entry is fixed.

	* fb/x_display.c: The problem of drawing the mouse cursor in the rotated
	  display is fixed.

	* android/jni/x_display.c: The symbol of x_display_rotate() is added.

2014-02-16  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.fb, doc/ja/README.fb: Updated.

	* x_sb_screen.c: Segfault in changing "rotate_display" option dynamically
	  is fixed.

2014-02-16  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.fb, doc/ja/README.fb: Updated.
