@@ -9,7 +9,7 @@ ver 3.3.3
   from drcs to unicode private area. (Disabled by default.)
   (See http://github.com/saitoha/drcsterm/blob/master/README.rst)
 * Add "rotate_display" option which rotates display clockwise or counterclockwise
-  on framebuffer and android.
+  on framebuffer and Android.
 * Merge patches:
   https://gist.github.com/steleto/8671862 (Thanks to @tristelo)
 * Bug fixes:
